# GlobalsDemo

./: CMakeLists.txt  Dynamic.cpp  Dynamic.hpp  Informer.cpp  Informer.hpp  Main.cpp  Static.cpp  Static.hpp
